them cache, mo/khoa tk, sua prompt,...